--- a/Rails/szakdoga/Gemfile
+++ b/Rails/szakdoga/Gemfile
@@ -22,6 +22,7 @@ gem "jbuilder"
 
 gem 'chartkick'
 gem 'groupdate'
+gem 'csv'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ windows jruby ]
